# winterfell

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  config.py  config.py.sample  requirements.txt  setup.cfg  setup.py  start.sh  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
public/js/: winterfell.js
releasenotes/source/: conf.py  index.rst
winterfell/: __init__.py  app.py  client.py  exception.py  hooks.py  i18n.py  ldap_client.py
winterfell/controllers/: common.py  group.py  root.py  user.py
winterfell/templates/: ch_user.ldif.j2  group.ldif.j2  index.html  user.ldif.j2
winterfell/tests/: __init__.py  config.py  test_functional.py  test_winterfell.py
